@@ -109,7 +109,7 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
         assertEquals(1, feature.getQualifiers().size());
       }
     }
-    assertEquals(null, entry.getSequence().getMoleculeType());
+    assertNull(entry.getSequence().getMoleculeType());
   }
 
   public void testReadOnlySourceFeatureSkipNext() throws IOException {
@@ -172,8 +172,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(156), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(156), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -198,8 +198,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(156), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(156), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -223,8 +223,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(156), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(156), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -249,8 +249,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(156), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(156), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -275,8 +275,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof RemoteBase);
-    assertEquals(new Long(156), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(156), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertEquals("A00001", ((RemoteBase) location).getAccession());
     assertNull(((RemoteBase) location).getVersion());
     assertFalse(location.isComplement());
@@ -303,8 +303,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof RemoteBase);
-    assertEquals(new Long(156), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(156), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertEquals("A00001", ((RemoteBase) location).getAccession());
     assertEquals(Integer.valueOf(13), ((RemoteBase) location).getVersion());
     assertFalse(location.isComplement());
@@ -330,8 +330,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -356,8 +356,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -381,8 +381,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -406,8 +406,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -432,8 +432,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -458,8 +458,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -487,8 +487,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertTrue(location instanceof RemoteRange);
     assertEquals("A0001", ((RemoteRange) location).getAccession());
     assertNull(((RemoteRange) location).getVersion());
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -515,8 +515,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertTrue(location instanceof RemoteRange);
     assertEquals("A0001", ((RemoteRange) location).getAccession());
     assertNull(((RemoteRange) location).getVersion());
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -544,8 +544,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertTrue(location instanceof RemoteRange);
     assertEquals("A0001", ((RemoteRange) location).getAccession());
     assertEquals(Integer.valueOf(1), ((RemoteRange) location).getVersion());
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -569,8 +569,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBetween);
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -595,8 +595,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBetween);
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -620,8 +620,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBetween);
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -645,8 +645,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBetween);
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -671,8 +671,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBetween);
-    assertEquals(new Long(4), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(4), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -697,8 +697,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(1, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBetween);
-    assertEquals(new Long(155), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(155), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -726,8 +726,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertTrue(location instanceof RemoteBetween);
     assertEquals("A0001", ((RemoteBetween) location).getAccession());
     assertNull(((RemoteBetween) location).getVersion());
-    assertEquals(new Long(155), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(155), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -755,8 +755,8 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertTrue(location instanceof RemoteBetween);
     assertEquals("A0001", ((RemoteBetween) location).getAccession());
     assertEquals(Integer.valueOf(1), ((RemoteBetween) location).getVersion());
-    assertEquals(new Long(155), location.getBeginPosition());
-    assertEquals(new Long(156), location.getEndPosition());
+    assertEquals(Long.valueOf(155), location.getBeginPosition());
+    assertEquals(Long.valueOf(156), location.getEndPosition());
     assertTrue(location.isComplement());
   }
 
@@ -783,25 +783,25 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(4, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(1), location.getBeginPosition());
-    assertEquals(new Long(1), location.getEndPosition());
+    assertEquals(Long.valueOf(1), location.getBeginPosition());
+    assertEquals(Long.valueOf(1), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(1);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(2), location.getBeginPosition());
-    assertEquals(new Long(34), location.getEndPosition());
+    assertEquals(Long.valueOf(2), location.getBeginPosition());
+    assertEquals(Long.valueOf(34), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(2);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertTrue(location.isComplement());
     location = locations.getLocations().get(3);
     assertTrue(location instanceof RemoteRange);
     assertEquals("A00001", ((RemoteRange) location).getAccession());
     assertEquals(Integer.valueOf(5), ((RemoteRange) location).getVersion());
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -828,25 +828,25 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(4, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(1), location.getBeginPosition());
-    assertEquals(new Long(1), location.getEndPosition());
+    assertEquals(Long.valueOf(1), location.getBeginPosition());
+    assertEquals(Long.valueOf(1), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(1);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(2), location.getBeginPosition());
-    assertEquals(new Long(34), location.getEndPosition());
+    assertEquals(Long.valueOf(2), location.getBeginPosition());
+    assertEquals(Long.valueOf(34), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(2);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertTrue(location.isComplement());
     location = locations.getLocations().get(3);
     assertTrue(location instanceof RemoteRange);
     assertEquals("A00001", ((RemoteRange) location).getAccession());
     assertEquals(Integer.valueOf(5), ((RemoteRange) location).getVersion());
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -872,22 +872,22 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(4, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(1594), location.getBeginPosition());
-    assertEquals(new Long(1883), location.getEndPosition());
+    assertEquals(Long.valueOf(1594), location.getBeginPosition());
+    assertEquals(Long.valueOf(1883), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(1);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(1927), location.getBeginPosition());
-    assertEquals(new Long(2065), location.getEndPosition());
+    assertEquals(Long.valueOf(1927), location.getBeginPosition());
+    assertEquals(Long.valueOf(2065), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(2);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(2746), location.getBeginPosition());
-    assertEquals(new Long(2749), location.getEndPosition());
+    assertEquals(Long.valueOf(2746), location.getBeginPosition());
+    assertEquals(Long.valueOf(2749), location.getEndPosition());
     location = locations.getLocations().get(3);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(3182), location.getBeginPosition());
-    assertEquals(new Long(3228), location.getEndPosition());
+    assertEquals(Long.valueOf(3182), location.getBeginPosition());
+    assertEquals(Long.valueOf(3228), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -914,25 +914,25 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(4, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(1), location.getBeginPosition());
-    assertEquals(new Long(1), location.getEndPosition());
+    assertEquals(Long.valueOf(1), location.getBeginPosition());
+    assertEquals(Long.valueOf(1), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(1);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(2), location.getBeginPosition());
-    assertEquals(new Long(34), location.getEndPosition());
+    assertEquals(Long.valueOf(2), location.getBeginPosition());
+    assertEquals(Long.valueOf(34), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(2);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertTrue(location.isComplement());
     location = locations.getLocations().get(3);
     assertTrue(location instanceof RemoteRange);
     assertEquals("A00001", ((RemoteRange) location).getAccession());
     assertEquals(Integer.valueOf(5), ((RemoteRange) location).getVersion());
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -959,25 +959,25 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(4, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(1), location.getBeginPosition());
-    assertEquals(new Long(1), location.getEndPosition());
+    assertEquals(Long.valueOf(1), location.getBeginPosition());
+    assertEquals(Long.valueOf(1), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(1);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(2), location.getBeginPosition());
-    assertEquals(new Long(34), location.getEndPosition());
+    assertEquals(Long.valueOf(2), location.getBeginPosition());
+    assertEquals(Long.valueOf(34), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(2);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertTrue(location.isComplement());
     location = locations.getLocations().get(3);
     assertTrue(location instanceof RemoteRange);
     assertEquals("A00001", ((RemoteRange) location).getAccession());
     assertEquals(Integer.valueOf(5), ((RemoteRange) location).getVersion());
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -1004,25 +1004,25 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(4, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(1), location.getBeginPosition());
-    assertEquals(new Long(1), location.getEndPosition());
+    assertEquals(Long.valueOf(1), location.getBeginPosition());
+    assertEquals(Long.valueOf(1), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(1);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(2), location.getBeginPosition());
-    assertEquals(new Long(34), location.getEndPosition());
+    assertEquals(Long.valueOf(2), location.getBeginPosition());
+    assertEquals(Long.valueOf(34), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(2);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertTrue(location.isComplement());
     location = locations.getLocations().get(3);
     assertTrue(location instanceof RemoteRange);
     assertEquals("A00001", ((RemoteRange) location).getAccession());
     assertEquals(Integer.valueOf(5), ((RemoteRange) location).getVersion());
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -1049,25 +1049,25 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(4, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(1), location.getBeginPosition());
-    assertEquals(new Long(1), location.getEndPosition());
+    assertEquals(Long.valueOf(1), location.getBeginPosition());
+    assertEquals(Long.valueOf(1), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(1);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(2), location.getBeginPosition());
-    assertEquals(new Long(34), location.getEndPosition());
+    assertEquals(Long.valueOf(2), location.getBeginPosition());
+    assertEquals(Long.valueOf(34), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(2);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertTrue(location.isComplement());
     location = locations.getLocations().get(3);
     assertTrue(location instanceof RemoteRange);
     assertEquals("A00001", ((RemoteRange) location).getAccession());
     assertEquals(Integer.valueOf(5), ((RemoteRange) location).getVersion());
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -1094,25 +1094,25 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(4, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(1), location.getBeginPosition());
-    assertEquals(new Long(1), location.getEndPosition());
+    assertEquals(Long.valueOf(1), location.getBeginPosition());
+    assertEquals(Long.valueOf(1), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(1);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(2), location.getBeginPosition());
-    assertEquals(new Long(34), location.getEndPosition());
+    assertEquals(Long.valueOf(2), location.getBeginPosition());
+    assertEquals(Long.valueOf(34), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(2);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertTrue(location.isComplement());
     location = locations.getLocations().get(3);
     assertTrue(location instanceof RemoteRange);
     assertEquals("A00001", ((RemoteRange) location).getAccession());
     assertEquals(Integer.valueOf(5), ((RemoteRange) location).getVersion());
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
@@ -1139,25 +1139,25 @@ public class EmblFeatureReaderTest extends EmblReaderTest {
     assertEquals(4, locations.getLocations().size());
     Location location = locations.getLocations().get(0);
     assertTrue(location instanceof LocalBase);
-    assertEquals(new Long(1), location.getBeginPosition());
-    assertEquals(new Long(1), location.getEndPosition());
+    assertEquals(Long.valueOf(1), location.getBeginPosition());
+    assertEquals(Long.valueOf(1), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(1);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(2), location.getBeginPosition());
-    assertEquals(new Long(34), location.getEndPosition());
+    assertEquals(Long.valueOf(2), location.getBeginPosition());
+    assertEquals(Long.valueOf(34), location.getEndPosition());
     assertFalse(location.isComplement());
     location = locations.getLocations().get(2);
     assertTrue(location instanceof LocalRange);
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertTrue(location.isComplement());
     location = locations.getLocations().get(3);
     assertTrue(location instanceof RemoteRange);
     assertEquals("A00001", ((RemoteRange) location).getAccession());
     assertEquals(Integer.valueOf(5), ((RemoteRange) location).getVersion());
-    assertEquals(new Long(34), location.getBeginPosition());
-    assertEquals(new Long(45), location.getEndPosition());
+    assertEquals(Long.valueOf(34), location.getBeginPosition());
+    assertEquals(Long.valueOf(45), location.getEndPosition());
     assertFalse(location.isComplement());
   }
 
